@@ -1411,7 +1411,7 @@ for_each_matching_queue (struct device_uris *device_uris,
       const char *printer_state_message = NULL;
       int state = 0;
       size_t i, l;
-      char *this_device_uri_n, *device_uri_n;
+      char *this_device_uri_n = NULL, *device_uri_n = NULL;
       const char *ps1, *ps2, *pi1, *pi2;
 
       while (attr && ippGetGroupTag (attr) != IPP_TAG_PRINTER)
@@ -1448,6 +1448,8 @@ for_each_matching_queue (struct device_uris *device_uris,
       for (i = 0; i < device_uris->n_uris; i++)
 	{
 	  device_uri_n = normalize_device_uri(device_uris->uri[i]);
+          if (this_device_uri_n == NULL || device_uri_n == NULL)
+            goto skip;
 	  /* As for the same device different URIs can come out when the
 	     device is accessed via the usblp kernel module or via low-
 	     level USB (libusb) we cannot simply compare URIs, must
@@ -1512,8 +1514,12 @@ for_each_matching_queue (struct device_uris *device_uris,
       firstqueue = 0;
 
     skip:
-      free(device_uri_n);
-      free(this_device_uri_n);
+      if (device_uri_n != NULL)
+        free(device_uri_n);
+        device_uri_n = NULL;
+      if (this_device_uri_n != NULL)
+        free(this_device_uri_n);
+        this_device_uri_n = NULL;
       if (!attr)
 	break;
     }
