@@ -1,5 +1,6 @@
 1.5.13 changes
 --------------
+- add checks for NULL in udev-configure-printer (Fedora #1761097)
 
 1.5.12 changes
 --------------
